--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,20 +1,18 @@
-name: bloc_architecture_app
-description: A Flutetr Bloc Architecture project.
+name: jedi 
+description: An application used to supervise the status of students in bsmch courses
 
-publish_to: 'none'
+publish_to: "none"
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.7.0 <3.0.0'
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  bloc: ^6.1.1
-  cupertino_icons: ^1.0.0
-  flutter_bloc: ^6.1.1
-  hydrated_bloc: ^6.1.0
+  flutter_bloc: ^7.0.0
+  hydrated_bloc: ^7.0.0
 
 dev_dependencies:
   flutter_test:
