--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_hooks: ^0.16.0
   google_fonts: ^2.0.0
   hydrated_bloc: ^7.0.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
