--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   animate_do: ^2.0.0
   another_flushbar: ^1.10.17
   convex_bottom_bar: ^3.0.0
+  dartz: ^0.10.0-nullsafety.1
   dio: ^4.0.0
   equatable: ^2.0.0
   flutter_bloc: ^7.0.0
