--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   equatable: ^2.0.0
   flutter_bloc: ^7.0.0
   flutter_hooks: ^0.16.0
+  flutter_typeahead: ^3.1.1
   google_fonts: ^2.0.0
   hydrated_bloc: ^7.0.0
   intl: ^0.17.0
