--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   google_fonts: ^2.0.0
   hydrated_bloc: ^7.0.0
   intl: ^0.17.0
+  rxdart: ^0.26.0
 
 dev_dependencies:
   flutter_test:
