--- a/App/pubspec.yaml
+++ b/App/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   equatable: ^2.0.0
   flutter_bloc: ^7.0.0
   flutter_hooks: ^0.16.0
+  flutter_launcher_icons: ^0.9.0
   flutter_typeahead: ^3.1.1
   google_fonts: ^2.0.0
   hydrated_bloc: ^7.0.0
@@ -30,6 +31,11 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/icon.png"
 
 flutter:
   uses-material-design: true
